# aredl-backend-v2

./: .dockerignore  .env  .env.example  .env_example  .gitignore  .pgpass.tmpl  Cargo.toml  Dockerfile  FIX_PROPOSAL.md  LICENSE  README.md  bounty_board_api.py  clippy.toml  diesel.toml  docker-compose.yml  docker-stack.yml  prometheus.yml.template  prometheus.yml.tmpl
.github/workflows/: apply-backfills.yml  ci.yml  cicd.yml  db-backup.yml  deploy-stack.yml  deploy.yml  migrate-dev-db.yml  rust.yml
migrations/2024-05-11-133748_create_aredl/: up.sql
migrations/2024-05-18-163111_global/: up.sql
migrations/2024-05-18-164023_aredl_levels/: down.sql  up.sql
migrations/2024-05-21-144810_oauth/: up.sql
migrations/2024-05-22-143110_permissions/: down.sql  up.sql
migrations/2024-05-23-134815_aredl_packs/: down.sql  up.sql
migrations/2024-05-23-142553_aredl_records/: down.sql  up.sql
migrations/2024-08-06-182001_aredl_leaderboard/: down.sql  up.sql
migrations/2024-08-16-175819_oauth/: up.sql
migrations/2025-02-04-113919_merge_requests/: down.sql  up.sql
migrations/2025-02-07-172453_countries/: down.sql  up.sql
migrations/2025-02-09-185326_clans/: down.sql  up.sql
migrations/2025-02-15-192735_notifications/: down.sql  up.sql
migrations/2025-02-17-113919_merge_requests/: down.sql  up.sql
migrations/2025-04-15-135347_record_status/: down.sql  up.sql
migrations/2025-04-15-232431_merge_requests_fix/: down.sql  up.sql
migrations/2025-04-16-170831_priority_value/: down.sql  up.sql
migrations/2025-04-16-214413_aredl_users_leaderboard_add_clan_id/: down.sql  up.sql
migrations/2025-04-21-127239_submission_history/: down.sql  up.sql
migrations/2025-04-21-222642_merge_requests_fix_roles/: down.sql  up.sql
migrations/2025-04-22-164123_mod_menu/: down.sql  up.sql
migrations/2025-04-22-205912_records_edit_verification/: down.sql  up.sql
migrations/2025-04-24-234729_records_and_submissions_fields_rename/: down.sql  up.sql
migrations/2025-04-26-230946_lb_refresh_timestamp/: down.sql  up.sql
migrations/2025-04-28-212720_submission_id_not_null/: down.sql  up.sql
migrations/2025-05-01-150648_submission_history_fields/: down.sql  up.sql
migrations/2025-05-02-220345_shifts/: down.sql  up.sql
migrations/2025-05-08-151751_separate_schemas/: down.sql  up.sql
migrations/2025-05-08-210720_platformer/: down.sql  up.sql
migrations/2025-05-28-200619_fix_merge_requests_again/: down.sql  up.sql
migrations/2025-06-11-180735_selectable_profile_background_level/: down.sql  up.sql
migrations/2025-06-15-184828_fix_position_history_when_list_empty/: down.sql  up.sql
migrations/2025-06-17-053729_disable_submissions/: down.sql  up.sql
migrations/2025-06-29-221005_level_ldms/: down.sql  up.sql
migrations/2025-07-01-235614_dynamic_guidelines/: down.sql  up.sql
migrations/2025-07-06-131227_oauth_remove_id_token/: down.sql  up.sql
migrations/2025-07-08-185922_make_shifts_non_list_dependant/: down.sql  up.sql
migrations/2025-07-16-022437_rework_custom_ids/: down.sql  up.sql
migrations/2025-08-02-190119_submissions_statistics/: down.sql  up.sql
migrations/2025-08-15-210211_fix_records_time_update_on_ordering_change/: down.sql  up.sql
migrations/2025-08-16-130624_records_statistics/: down.sql  up.sql
migrations/2025-08-17-161225_discord_pfp_auto_update/: down.sql  up.sql
migrations/2025-09-13-025940_hide_public_video/: down.sql  up.sql
migrations/2025-11-17-000352_rework_submissions/: down.sql  up.sql
migrations/2025-11-20-003106_default_clock_timestamp/: down.sql  up.sql
migrations/2025-11-29-163327_country_and_clan_ban_fix/: down.sql  up.sql
migrations/2026-01-04-214522_current_queue_stats/: down.sql  up.sql
migrations/2026-01-13-223316_hideable_roles/: down.sql  up.sql
migrations/2026-01-20-234919_fix_merges_disable_records_updated_at_trigger/: down.sql  up.sql
migrations/2026-01-24-222244_no_delete_on_deny/: down.sql  up.sql
migrations/2026-01-25-201055_exclude_pemonlist_sync_from_accepted_stats/: down.sql  up.sql
migrations/2026-01-27-193145_merge_fix_submissions_rework/: up.sql
migrations/2026-02-16-213810_fix_legacy_points_update/: down.sql  up.sql
migrations/2026-02-24-192250_remove_submissions_with_priority_view/: down.sql  up.sql
migrations/2026-03-09-021401_level_notes/: down.sql  up.sql
migrations/2026-03-13-120000_position_history_clock_timestamp/: down.sql  up.sql
migrations/2026-03-15-055508_shift_status_excused/: down.sql  up.sql
migrations/2026-03-16-001253_country_clan_created_levels_matviews/: down.sql  up.sql
migrations/2026-04-06-120000_user_badges/: up.sql
migrations/2026-04-08-183205_user_badges/: down.sql  up.sql
migrations/2026-05-05-194512_level_status/: down.sql  up.sql
migrations/2026-05-19-211531_bounty_board/: down.sql  up.sql
migrations/2026-06-11-153421_clan_country_profile_full_victors_list_and_members_points/: down.sql  up.sql
migrations/2026-06-16-165248_patreon_integration/: down.sql  up.sql
migrations/2026-06-22-231018_pack_victors/: down.sql  up.sql
migrations/2026-06-23-230239_reworked_users_table/: down.sql  up.sql
migrations/create_aredl_levels/: up.sql
src/: cache_control.rs  clean_notifications.rs  custom_schema.rs  data_cleaner.rs  db.rs  docs.rs  error_handler.rs  external_connections.rs  main.rs  page_helper.rs  refresh_leaderboard.rs  refresh_level_data.rs  schema.rs  test_utils.rs  tests.rs  user.rs
src/app_data/: auth.rs  db.rs  drive.rs  mod.rs
src/aredl/: mod.rs  routes.rs
src/arepl/: mod.rs  routes.rs
src/auth/: apikey.rs  app_state.rs  authenticated.rs  claims.rs  discord.rs  logout.rs  middleware.rs  mod.rs  oauth.rs  patreon.rs  permission.rs  refresh.rs  routes.rs  test_utils.rs  tests.rs  token.rs
src/clans/: mod.rs  model.rs  routes.rs  test_utils.rs  tests.rs
src/health/: mod.rs  routes.rs  tests.rs
src/notifications/: model.rs  routes.rs  tests.rs
tools/seed_aredl/: Cargo.toml  Dockerfile  migrate.sh
tools/seed_aredl/src/: error_handler.rs  main.rs  schema.rs
tools/seed_aredl/src/schema/: mod.rs  public_schema.rs
(+370 files in other folders)
