[package]
name = "aredl-backend"
version = "2.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
actix-ws = "0.3"
actix-rt = "2.11"
actix-governor = "0.10"
actix-cors = "0.7.1"
actix-http = "3.7"
utoipa = { version = "5", features = ["actix_extras", "uuid", "chrono", "preserve_order", "preserve_path_order", "openapi_extensions", "macros"] }
utoipa-rapidoc = { version = "6", features = ["actix-web"] }
cron = "0.15"
tokio = { version = "1.39", features = ["full"]}
chrono = {version = "0.4", features = ["serde"]}
uuid = { version = "1.8", features = ["serde", "v4"] }
diesel = { version = "2.3", features = ["postgres", "r2d2", "chrono", "uuid"]}
diesel_migrations = "2.3"
diesel-derive-enum = { version = "2.1", features = ["postgres"]}
openidconnect = { version = "3.5", features = ["reqwest"]}
futures-util = "0.3"
dotenv = "0.15"
tracing-actix-web = "0.7.19"
tracing-subscriber = { version = "0.2", features = ["env-filter", "fmt"] }
tracing = "0.1"
log = "0.4"
listenfd = "1.0"
reqwest = { version = "0.12", features = ["cookies", "json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"
jsonwebtoken = { version = "9.3", features = ["default"] }
strum = {version = "0.27.2", features = ["strum_macros"]}
strum_macros = "0.27.2"
itertools = "0.14.0"
prometheus = "0.14.0"
actix-web-prom = "0.10.0"
is-url = "1.0.4"
rand = "0.9.2"
httpmock = "0.8.2"
regex = "1.12.2"
tempfile = "3.23.0"
