[package]
name = "aredl-backend"
version = "2.2.0"
edition = "2021"

[dependencies]
actix-web = "4.12"
actix-ws = "0.4"
actix-rt = "2.11"
actix-governor = "0.10"
actix-cors = "0.7.1"
actix-http = "3.7"
utoipa = { version = "5", features = ["actix_extras", "uuid", "chrono", "preserve_order", "preserve_path_order", "openapi_extensions", "macros"] }
utoipa-rapidoc = { version = "6", features = ["actix-web"] }
cron = "0.17"
tokio = { version = "1.39", features = ["full"]}
chrono = {version = "0.4", features = ["serde"]}
uuid = { version = "1.8", features = ["serde", "v4"] }
diesel = { version = "2.3", features = ["postgres", "r2d2", "chrono", "uuid"]}
diesel_migrations = "2.3"
diesel-derive-enum = { version = "2.1", features = ["postgres"]}
oauth2 = { version = "5.0", default-features = false, features = ["reqwest", "rustls-tls"] }
futures-util = "0.3"
tracing-actix-web = "0.7.19"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing = "0.1"
serial_test = "3"
log = "0.4"
listenfd = "1.0"
reqwest = { version = "0.12", features = ["cookies", "json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"
jsonwebtoken = { version = "10.4", default-features = false, features = ["aws_lc_rs"] }
strum = {version = "0.28.0", features = ["strum_macros"]}
strum_macros = "0.28.0"
itertools = "0.15.0"
prometheus = "0.14.0"
actix-web-prom = "0.10.0"
rand = "0.10.1"
chacha20poly1305 = "0.10.1"
base64 = "0.22"
httpmock = "0.8.2"
tempfile = "3.23.0"
async-trait = "0.1.89"
url = "2.5.7"
indexmap = "2.14.0"
dotenvy = "0.15.7"

[lints.clippy]
string_slice = "warn"
indexing_slicing = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"

let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"

await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"
large_futures = "warn"

mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"

float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_possible_truncation = "warn"

rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"

absolute_paths = "warn"
redundant_clone = "warn"
unnecessary_wraps = "warn"
wildcard_enum_match_arm = "warn"
fallible_impl_from = "warn"
await_holding_invalid_type = "warn"
print_stdout = "warn"
print_stderr = "warn"
exit = "warn"
