[package]
name = "aredl-backend"
version = "2.2.0"
edition = "2021"

[dependencies]
actix-web = "4.12"
actix-ws = "0.4"
actix-rt = "2.11"
actix-governor = "0.10"
actix-cors = "0.7.1"
actix-http = "3.7"
utoipa = { version = "5", features = ["actix_extras", "uuid", "chrono", "preserve_order", "preserve_path_order", "openapi_extensions", "macros"] }
utoipa-rapidoc = { version = "6", features = ["actix-web"] }
cron = "0.17"
tokio = { version = "1.39", features = ["full"]}
chrono = {version = "0.4", features = ["serde"]}
uuid = { version = "1.8", features = ["serde", "v4"] }
diesel = { version = "2.3", features = ["postgres", "r2d2", "chrono", "uuid"]}
diesel_migrations = "2.3"
diesel-derive-enum = { version = "2.1", features = ["postgres"]}
oauth2 = { version = "5.0", default-features = false, features = ["reqwest", "rustls-tls"] }
futures-util = "0.3"
tracing-actix-web = "0.7.19"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing = "0.1"
serial_test = "3"
log = "0.4"
listenfd = "1.0"
reqwest = { version = "0.12", features = ["cookies", "json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"
jsonwebtoken = { version = "10.4", default-features = false, features = ["aws_lc_rs"] }
strum = {version = "0.28.0", features = ["strum_macros"]}
strum_macros = "0.28.0"
itertools = "0.15.0"
prometheus = "0.14.0"
actix-web-prom = "0.10.0"
rand = "0.10.1"
chacha20poly1305 = "0.10.1"
base64 = "0.22"
httpmock = "0.8.2"
tempfile = "3.23.0"
async-trait = "0.1.89"
url = "2.5.7"
indexmap = "2.14.0"
dotenvy = "0.15.7"

[lints.clippy]
# Correctness / panics / unfinished code
unwrap_used = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
panic = "warn"
panic_in_result_fn = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
try_err = "warn"
manual_assert = "warn"
assertions_on_result_states = "warn"

# Indexing / slicing / bounds
indexing_slicing = "warn"
string_slice = "warn"
index_refutable_slice = "warn"

# Async / futures / locks
await_holding_invalid_type = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"
large_futures = "warn"
let_underscore_future = "warn"
unused_async = "warn"

# Error handling / results
map_err_ignore = "warn"
unused_result_ok = "warn"
match_wild_err_arm = "warn"
error_impl_error = "warn"

# Unsafe / memory
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"
mem_forget = "warn"
mut_mut = "warn"
rc_mutex = "warn"

# Numeric correctness / casts / floats / time
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
invalid_upcast_comparisons = "warn"
lossy_float_literal = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_midpoint = "warn"
unchecked_time_subtraction = "warn"

# Control flow / matches / branching
collapsible_else_if = "warn"
comparison_chain = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
match_bool = "warn"
match_same_arms = "warn"
needless_continue = "warn"
redundant_else = "warn"
return_and_then = "warn"
same_functions_in_if_condition = "warn"
single_match_else = "warn"
wildcard_enum_match_arm = "warn"

# Iterators / collections
copy_iterator = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
map_unwrap_or = "warn"
map_with_unused_argument_over_ranges = "warn"
unnecessary_join = "warn"

# Clones / copies / ownership / passing
cloned_instead_of_copied = "warn"
debug_assert_with_mut_call = "warn"
expl_impl_clone_on_copy = "warn"
implicit_clone = "warn"
needless_pass_by_value = "warn"
option_as_ref_cloned = "warn"
redundant_clone = "warn"
trivially_copy_pass_by_ref = "warn"

# References / deref / pointers
deref_by_slicing = "warn"
explicit_deref_methods = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_option = "warn"
ref_option_ref = "warn"
ref_patterns = "warn"

# Types / APIs / trait impls
default_trait_access = "warn"
fallible_impl_from = "warn"
infallible_try_from = "warn"
mismatching_type_param_order = "warn"
unnecessary_box_returns = "warn"
unnecessary_literal_bound = "warn"
unnecessary_wraps = "warn"
unused_self = "warn"
unused_trait_names = "warn"

# Public API / visibility / naming
absolute_paths = "warn"
enum_glob_use = "warn"
partial_pub_fields = "warn"
pub_underscore_fields = "warn"

# Formatting / syntax / readability
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
empty_enum_variants_with_brackets = "warn"
empty_enums = "warn"
empty_structs_with_brackets = "warn"
inconsistent_struct_constructor = "warn"
items_after_statements = "warn"
many_single_char_names = "warn"
missing_assert_message = "warn"
needless_raw_string_hashes = "warn"
needless_raw_strings = "warn"
redundant_closure_for_method_calls = "warn"
redundant_type_annotations = "warn"
semicolon_if_nothing_returned = "warn"
semicolon_inside_block = "warn"
stable_sort_primitive = "warn"
str_split_at_newline = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
unneeded_field_pattern = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
uninlined_format_args = "warn"
unnecessary_semicolon = "warn"
unnecessary_trailing_comma = "warn"
unseparated_literal_suffix = "warn"

# Side effects / debug leftovers / process IO
dbg_macro = "warn"
exit = "warn"
let_underscore_must_use = "warn"
print_stderr = "warn"
print_stdout = "warn"