[package]
name = "seed_aredl"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid"]}
diesel_migrations = "2.1"
r2d2 = "0.8"
dotenv = "0.15"
itertools = "0.13.0"